Added in factories for the components in the requirements grid window.
Should be able to load the grid with data from the database as next task.

--- a/src/ROMdb/Views/RequirementsEntryView.fxml
+++ b/src/ROMdb/Views/RequirementsEntryView.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchor_requirements" maxHeight="5000.0" maxWidth="5000.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.RequirementsController">
+<AnchorPane fx:id="anchor_requirements" maxHeight="5000.0" maxWidth="5000.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.RequirementsController">
    <children>
       <BorderPane maxHeight="5000.0" maxWidth="5000.0" prefHeight="600.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -401,24 +401,24 @@
          <center>
             <TableView fx:id="table_requirements" editable="true" prefHeight="381.0" prefWidth="800.0" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
               <columns>
-                <TableColumn prefWidth="75.0" text="CSC" />
-                <TableColumn prefWidth="75.0" text="CSU" />
-                  <TableColumn prefWidth="83.0" text="Doors ID" />
-                  <TableColumn prefWidth="120.0" text="Paragraph/Figure" />
-                  <TableColumn prefWidth="71.0" text="Baseline" />
-                  <TableColumn prefWidth="78.0" text="SC/ICR" />
-                  <TableColumn prefWidth="150.0" text="Capability" />
-                  <TableColumn minWidth="0.0" prefWidth="48.0" text="Add" />
-                  <TableColumn minWidth="0.0" prefWidth="50.0" text="Change" />
-                  <TableColumn prefWidth="48.0" text="Delete" />
-                  <TableColumn prefWidth="56.0" text="Design" />
-                  <TableColumn prefWidth="51.0" text="Code" />
-                  <TableColumn prefWidth="67.0" text="Unit Test" />
-                  <TableColumn prefWidth="139.0" text="Integration" />
-                  <TableColumn prefWidth="120.0" text="RI" />
-                  <TableColumn prefWidth="120.0" text="Rommer" />
-                  <TableColumn prefWidth="120.0" text="Program" />
-                  <TableColumn prefWidth="120.0" text="Build" />
+                <TableColumn fx:id="tableColumn_csc" prefWidth="72.0" text="CSC" />
+                <TableColumn fx:id="tableColumn_csu" prefWidth="93.0" text="CSU" />
+                  <TableColumn fx:id="tableColumn_doorsID" prefWidth="154.240234375" text="Doors ID" />
+                  <TableColumn fx:id="tableColumn_paragraph" prefWidth="95.0" text="Paragraph/Figure" />
+                  <TableColumn fx:id="tableColumn_baseline" prefWidth="91.0" text="Baseline" />
+                  <TableColumn fx:id="tableColumn_scicr" prefWidth="83.0" text="SC/ICR" />
+                  <TableColumn fx:id="tableColumn_capability" prefWidth="92.0" text="Capability" />
+                  <TableColumn fx:id="tableColumn_add" minWidth="0.0" prefWidth="101.0" text="Add" />
+                  <TableColumn fx:id="tableColumn_change" minWidth="0.0" prefWidth="84.0" text="Change" />
+                  <TableColumn fx:id="tableColumn_delete" minWidth="0.0" prefWidth="109.240234375" text="Delete" />
+                  <TableColumn fx:id="tableColumn_designWeight" minWidth="0.0" prefWidth="74.0" text="Design" />
+                  <TableColumn fx:id="tableColumn_codeWeight" prefWidth="117.0" text="Code" />
+                  <TableColumn fx:id="tableColumn_unitTestWeight" minWidth="0.0" prefWidth="49.0" text="Unit Test" />
+                  <TableColumn fx:id="tableColumn_integrationWeight" prefWidth="157.0" text="Integration" />
+                  <TableColumn fx:id="tableColumn_ri" prefWidth="120.0" text="RI" />
+                  <TableColumn fx:id="tableColumn_rommer" prefWidth="120.0" text="Rommer" />
+                  <TableColumn fx:id="tableColumn_program" prefWidth="120.0" text="Program" />
+                  <TableColumn fx:id="tableColumn_build" prefWidth="120.0" text="Build" />
               </columns>
             </TableView>
          </center>
