--- a/src/ROMdb/Views/EstimationBaseView.fxml
+++ b/src/ROMdb/Views/EstimationBaseView.fxml
@@ -1,44 +1,198 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<Pane fx:id="estimationBaseView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0" style="-fx-background-color: lightgrey; -fx-border-color: grey; -fx-border-style: solid;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.EstimationBaseController">
+<StackPane prefHeight="515.0" prefWidth="625.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.EstimationBaseController">
    <children>
-      <Label fx:id="label_baseline" layoutX="71.0" layoutY="60.0" text="Baseline" visible="false" />
-      <Label fx:id="label_cprs" layoutX="338.0" layoutY="60.0" text="CPRS#" />
-      <Label fx:id="label_staffMonth" layoutX="45.0" layoutY="155.0" text="SLOCs/Staff-Month" />
-      <Label fx:id="label_staffDay" layoutX="45.0" layoutY="187.0" text="SLOCs/Staff-Day" />
-      <Label fx:id="label_ddrCwtSlocs" layoutX="45.0" layoutY="379.0" text="DDR/CWT SLOCS" />
-      <Label fx:id="label_cpddDocument" layoutX="45.0" layoutY="250.0" text="CPDD Document" />
-      <Label fx:id="label_cpddDate" layoutX="45.0" layoutY="282.0" text="CPDD Date" />
-      <Label fx:id="label_budgetUpgrade" layoutX="45.0" layoutY="313.0" text="Budget Upgrade" />
-      <Label fx:id="label_budgetMaintenance" layoutX="45.0" layoutY="346.0" text="Budget Maintenance" />
-      <Label fx:id="label_designWeight" layoutX="349.0" layoutY="157.0" text="Design Weight" />
-      <Label fx:id="label_codeWeight" layoutX="349.0" layoutY="189.0" text="Code Weight" />
-      <Label fx:id="label_unitTestingWeight" layoutX="349.0" layoutY="221.0" text="Unit Test Weight" />
-      <Label fx:id="label_integrationWeight" layoutX="350.0" layoutY="252.0" text="Integration Weight" />
-      <Label fx:id="label_defaultSlocs" layoutX="45.0" layoutY="219.0" text="Default SLOCS" />
-
-      <ComboBox fx:id="combo_estimateBaseline" layoutX="137.0" layoutY="56.0" prefWidth="150.0" visible="false" />
-
-      <TextField fx:id="field_cprs" layoutX="406.0" layoutY="56.0" />
-      <TextField fx:id="field_staffMonth" layoutX="172.0" layoutY="151.0" onKeyReleased="#calculateStaffDay" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_staffDay" editable="false" layoutX="172.0" layoutY="183.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_defaultSlocs" layoutX="172.0" layoutY="214.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_cpddDocument" layoutX="172.0" layoutY="246.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_cpddDate" layoutX="172.0" layoutY="278.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_budgetUpgrade" layoutX="172.0" layoutY="309.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_budgetMaint" layoutX="172.0" layoutY="341.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_ddrCwtSlocs" layoutX="172.0" layoutY="374.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_designWeight" layoutX="461.0" layoutY="151.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_codeWeight" layoutX="461.0" layoutY="183.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_unitTestingWeight" layoutX="461.0" layoutY="214.0" prefHeight="25.0" prefWidth="120.0" />
-      <TextField fx:id="field_integrationWeight" layoutX="461.0" layoutY="246.0" prefHeight="25.0" prefWidth="120.0" />
-
-      <Button fx:id="button_estimateSubmit" layoutX="461.0" layoutY="434.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="25.0" prefWidth="120.0" text="Save" />
+      <BorderPane prefHeight="200.0" prefWidth="200.0">
+         <center>
+            <StackPane BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="269.0" prefWidth="300.0">
+                     <children>
+                        <VBox alignment="CENTER_LEFT" prefHeight="515.0" prefWidth="312.5">
+                           <children>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_cprs" minWidth="110.0" prefWidth="110.0" text="CPRS#" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                              
+                                                      <TextField fx:id="field_cprs" minWidth="150.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_staffMonth" minWidth="110.0" prefWidth="110.0" text="SLOCs/Staff-Month" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_staffMonth" minWidth="120.0" onKeyReleased="#calculateStaffDay" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_staffDay" minWidth="110.0" prefWidth="110.0" text="SLOCs/Staff-Day" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_staffDay" editable="false" minWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_defaultSlocs" minWidth="110.0" prefWidth="110.0" text="Default SLOCS" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_defaultSlocs" minWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_cpddDocument" minWidth="110.0" prefWidth="110.0" text="CPDD Document" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_cpddDocument" minWidth="120.0" />
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets right="10.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_cpddDate" minWidth="110.0" prefWidth="110.0" text="CPDD Date" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_cpddDate" minWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_budgetUpgrade" minWidth="110.0" prefWidth="110.0" text="Budget Upgrade" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_budgetUpgrade" minWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_budgetMaintenance" minWidth="110.0" text="Budget Maintenance" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_budgetMaint" minWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_ddrCwtSlocs" minWidth="110.0" prefWidth="110.0" text="DDR/CWT SLOCS" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_ddrCwtSlocs" minWidth="120.0" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <Region prefHeight="200.0" prefWidth="200.0" />
+                        <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="312.5">
+                           <children>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_baseline" text="Baseline" visible="false" />
+                              
+                                                            <ComboBox fx:id="combo_estimateBaseline" prefWidth="150.0" visible="false" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_designWeight" minWidth="101.0" prefWidth="101.0" text="Design Weight" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_designWeight" minWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_codeWeight" minWidth="101.0" prefWidth="101.0" text="Code Weight" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_codeWeight" minWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_unitTestingWeight" minWidth="101.0" prefWidth="101.0" text="Unit Test Weight" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_unitTestingWeight" minWidth="120.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="label_integrationWeight" minWidth="101.0" text="Integration Weight" HBox.hgrow="NEVER">
+                                       <HBox.margin>
+                                          <Insets right="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField fx:id="field_integrationWeight" minWidth="120.0" HBox.hgrow="NEVER" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                              
+                                                                  <Button fx:id="button_estimateSubmit" mnemonicParsing="false" onAction="#saveChanges" prefHeight="25.0" prefWidth="120.0" text="Save" HBox.hgrow="ALWAYS" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </children>
+            </StackPane>
+         </center>
+         <left>
+            <Pane prefHeight="200.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
+         </left>
+         <top>
+            <Pane prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </top>
+         <right>
+            <Pane prefHeight="200.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
+         </right>
+         <bottom>
+            <Pane prefHeight="50.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </bottom>
+      </BorderPane>
    </children>
-</Pane>
+</StackPane>
