--- a/src/ROMdb/Views/AddBaselineWindow.fxml
+++ b/src/ROMdb/Views/AddBaselineWindow.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="anchor_newBaseline" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="260.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddBaselineController">
+<AnchorPane fx:id="anchor_newBaseline" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="260.0" prefWidth="380.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.AddBaselineController">
    <children>
       <TextField fx:id="field_addBaseline" layoutX="20.0" layoutY="222.0" prefHeight="25.0" prefWidth="171.0" promptText="Enter baseline" />
       <Button fx:id="button_cancelNewBaseline" layoutX="284.0" layoutY="222.0" mnemonicParsing="false" onAction="#closeScene" prefHeight="25.0" prefWidth="76.0" text="Cancel" />
