--- a/src/ROMdb/Views/SCICRView.fxml
+++ b/src/ROMdb/Views/SCICRView.fxml
@@ -11,10 +11,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <StackPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ROMdb.Controllers.SCICRController">
    <children>
-      <BorderPane>
+      <BorderPane style="-fx-background-color: lightgrey;">
          <center>
             <VBox>
                <children>
