--- a/src/ROMdb/Views/RequirementsEntryView.fxml
+++ b/src/ROMdb/Views/RequirementsEntryView.fxml
@@ -191,9 +191,9 @@
                                                 <Insets left="5.0" right="5.0" />
                                              </HBox.margin>
                                           </VBox>
-                                          <VBox alignment="BOTTOM_CENTER" prefWidth="100.0">
+                                          <VBox alignment="BOTTOM_CENTER" prefHeight="42.0" prefWidth="68.0">
                                              <children>
-                                                <Button fx:id="button_clear" mnemonicParsing="false" prefHeight="35.0" prefWidth="60.0" text="Clear">
+                                                <Button fx:id="button_clear" mnemonicParsing="false" prefHeight="32.0" prefWidth="53.0" text="Clear">
                                                    <VBox.margin>
                                                       <Insets />
                                                    </VBox.margin>
@@ -202,6 +202,11 @@
                                              <HBox.margin>
                                                 <Insets left="5.0" right="5.0" />
                                              </HBox.margin>
+                                          </VBox>
+                                          <VBox alignment="BOTTOM_CENTER" prefHeight="28.0" prefWidth="66.0">
+                                             <children>
+                                                <Button fx:id="button_save" mnemonicParsing="false" onAction="#pressSave" prefHeight="32.0" prefWidth="53.0" text="Save" />
+                                             </children>
                                           </VBox>
                                        </children>
                                     </HBox>
