Refactored the code responsible for filtering in the RequirementsEntry portion of the program.
1. The originally loaded (all) requirements data is no longer saved in a hashmap, but rather as one observable list in the RequirementsModel class
2. Created FilterItem class used for representing filters in the program
3. Controller class now has method it can call to pass the current values of all the filter dropdowns it has into the RequirementsModel class as an array of FilterItems
4. Controller class now has method it can call to return an observable list which contains data filtered by the current filters in the RequirementsModel class (reference to previous point #3)
5. Renamed methods in RequirementsModel for better specificity of functionality
6. Refactored SearchQueries class to be renamed QueryBuilder, replacing previous method 'determineFilters' with a versatile method called 'buildSelectWhereQuery' which can handle any SELECT WHERE query. The method contstructs a SQL query and prepared statement based on the method arguments provided and will then return the PreparedStatement object ready for execution.
7. Began rudimentary abstraction of Database independence by creating classes UnknownDatabaseTypeException, DatabaseType, DatabaseUtilities, and Config. Functionality bare bones and barely implemented.

--- a/src/ROMdb/Views/RequirementsEntryView.fxml
+++ b/src/ROMdb/Views/RequirementsEntryView.fxml
@@ -214,7 +214,7 @@
                                        <children>
                                           <VBox alignment="BOTTOM_CENTER" prefHeight="47.0" prefWidth="76.0">
                                              <children>
-                                                <Button fx:id="button_newRow" mnemonicParsing="false" onAction="#newRow" prefHeight="32.0" prefWidth="67.0" text="New Row" />
+                                                <Button fx:id="button_newRow" mnemonicParsing="false" onAction="#addNewRowWithDefaultsToJTable" prefHeight="32.0" prefWidth="67.0" text="New Row" />
                                              </children>
                                           </VBox>
                                           <VBox alignment="CENTER" maxHeight="-Infinity" prefHeight="42.0" prefWidth="360.0">
